Add setOnItemClickListener (First not listening, but then Misteriously works after doing nothing)

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivityFragment"
-    android:background="@android:color/darker_gray">
-
+    android:background="@android:color/darker_gray"
+    >
     <GridView
         android:id="@+id/gridview_movies"
         android:layout_width="match_parent"
