--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ratanachai.popularmovies.DetailActivityFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="@string/title_activity_detail" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
