--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,14 +1,14 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    android:paddingBottom="0dp"
-    android:layout_margin="0dp"
     tools:context="com.ratanachai.popularmovies.DetailActivityFragment"
-    android:orientation="vertical"
-    >
+    android:layout_width="match_parent" android:layout_height="match_parent" >
+
+<LinearLayout
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:paddingLeft="0dp" android:paddingRight="0dp" android:paddingTop="0dp" android:paddingBottom="0dp"
+    android:layout_margin="0dp"
+    android:orientation="vertical" >
+
     <TextView
         android:id="@+id/movie_title"
         android:text="@string/movie_title"
@@ -24,8 +24,7 @@
         />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="200dp"
         android:orientation="horizontal"
         android:padding="@dimen/activity_vertical_margin"
         >
@@ -58,9 +57,8 @@
         android:id="@+id/movie_overview"
         android:text="@string/movie_overview"
         android:padding="@dimen/activity_vertical_margin"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         />
-
 </LinearLayout>
+</ScrollView>
