--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,8 @@
             android:text="@string/movie_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_display_1_material"
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textStyle="bold"
             android:textColor="#ffffffff"
             android:background="@drawable/title_background"
             android:paddingTop="@dimen/activity_vertical_margin"
@@ -22,7 +23,7 @@
             />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:orientation="horizontal"
             android:padding="@dimen/activity_vertical_margin"
             >
@@ -30,23 +31,31 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/movie_poster"
-                android:layout_weight="2"
-                />
+                android:layout_weight="4"
+                android:src="@mipmap/ic_launcher" />
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_horizontal_margin"
                 android:layout_weight="3"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:paddingTop="0dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 >
                 <TextView
                     android:id="@+id/movie_rating"
                     android:text="@string/movie_rating_label"
+                    android:textSize="@dimen/abc_text_size_medium_material"
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/movie_release"
                     android:text="@string/movie_release_label"
+                    android:textSize="@dimen/abc_text_size_medium_material"
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -54,6 +63,7 @@
         <TextView
             android:id="@+id/movie_overview"
             android:text="@string/movie_overview"
+            android:textSize="@dimen/abc_text_size_small_material"
             android:padding="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,6 +77,8 @@
             <TextView
                 android:id="@+id/movie_trailers_label"
                 android:text="@string/movie_trailers_label"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:textStyle="bold"
                 android:padding="@dimen/activity_vertical_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
