--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -55,6 +55,16 @@
             android:textSize="@dimen/abc_text_size_small_material"
             android:padding="@dimen/activity_vertical_margin"
             android:layout_width="match_parent" android:layout_height="wrap_content" />
+        <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
+            android:layout_width="match_parent" android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/movie_reviews_label"
+                android:text="@string/movie_reviews_label"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:textStyle="bold"
+                android:padding="@dimen/activity_vertical_margin"
+                android:layout_width="match_parent" android:layout_height="wrap_content" />
+        </LinearLayout>
         <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
             android:layout_width="match_parent" android:layout_height="wrap_content">
             <TextView
