--- a/app/src/main/res/layout/video_link_item.xml
+++ b/app/src/main/res/layout/video_link_item.xml
@@ -1,8 +1,5 @@
-<TextView
+<TextView android:id="@+id/movie_trailer_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/movie_trailer_item"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:text="@string/movie_trailer_placeholder"
     android:padding="@dimen/activity_vertical_margin"
-    />
+    android:layout_width="match_parent" android:layout_height="wrap_content" />
