--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -3,11 +3,16 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:id="@+id/movie_review_author"
         android:text="@string/movie_review_author"
-        android:padding="@dimen/activity_vertical_margin"
+        android:textStyle="bold"
+        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_width="match_parent" android:layout_height="wrap_content" />
     <TextView android:id="@+id/movie_review_content"
         android:text="@string/movie_review_content"
-        android:padding="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingTop="4dp"
         android:layout_width="match_parent" android:layout_height="wrap_content" />
 
 </LinearLayout>
