--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,19 +5,26 @@
         android:paddingLeft="0dp" android:paddingRight="0dp" android:paddingTop="0dp" android:paddingBottom="0dp"
         android:layout_margin="0dp"
         android:layout_width="match_parent" android:layout_height="wrap_content">
-
-        <TextView android:id="@+id/movie_title"
-            android:text="@string/movie_title"
-            android:textSize="@dimen/abc_text_size_headline_material"
-            android:textStyle="bold"
-            android:textColor="#ffffffff"
+        <LinearLayout android:orientation="horizontal"
             android:background="@drawable/title_background"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
-
+            android:layout_width="match_parent" android:layout_height="wrap_content">
+            <TextView android:id="@+id/movie_title"
+                android:text="@string/movie_title"
+                android:textSize="@dimen/abc_text_size_headline_material"
+                android:textStyle="bold"
+                android:textColor="#ffffffff"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
+            <ToggleButton android:id="@+id/star_toggle"
+                android:textOff="" android:textOn=""
+                android:background="@drawable/ic_toggle"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_width="36dp" android:layout_height="36dp" />
+        </LinearLayout>
         <LinearLayout android:orientation="horizontal"
             android:padding="@dimen/activity_vertical_margin"
             android:layout_width="match_parent" android:layout_height="300dp">
