--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -18,7 +18,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
-            <ToggleButton android:id="@+id/star_toggle"
+            <ToggleButton android:id="@+id/favorite_toggle"
                 android:textOff="" android:textOn=""
                 android:background="@drawable/ic_toggle"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
