--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,9 +3,11 @@
     <string-array name="pref_sort_options">
         <item>@string/pref_sort_popularity_label</item>
         <item>@string/pref_sort_rating_label</item>
+        <item>@string/pref_favorite_label</item>
     </string-array>
     <string-array name="pref_sort_values">
         <item>@string/pref_sort_popularity</item>
         <item>@string/pref_sort_rating</item>
+        <item>@string/pref_favorite</item>
     </string-array>
 </resources>
