Starting code for two pane

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,4 @@
     android:id="@+id/fragment"
     android:name="com.ratanachai.popularmovies.MainActivityFragment"
     tools:layout="@layout/fragment_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_width="match_parent" android:layout_height="match_parent" />
