--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,7 +9,7 @@
             android:background="@drawable/title_background"
             android:layout_width="match_parent" android:layout_height="wrap_content">
             <TextView android:id="@+id/movie_title"
-                android:text="@string/movie_title"
+                android:text="@string/please_select_movie"
                 android:textSize="@dimen/abc_text_size_headline_material"
                 android:textStyle="bold"
                 android:textColor="#ffffffff"
@@ -18,8 +18,8 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" />
-            <Button android:id="@+id/reset" android:text="x"
-                android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            <!--<Button android:id="@+id/reset" android:text="x"-->
+                <!--android:layout_width="wrap_content" android:layout_height="wrap_content" />-->
             <ToggleButton android:id="@+id/favorite_toggle"
                 android:textOff="" android:textOn=""
                 android:background="@drawable/ic_toggle"
@@ -60,7 +60,7 @@
         
         <TextView
             android:id="@+id/movie_overview"
-            android:text="@string/movie_overview_placeholder"
+            android:text="@string/please_select_movie_desc"
             android:textSize="@dimen/abc_text_size_small_material"
             android:padding="@dimen/activity_vertical_margin"
             android:layout_width="match_parent" android:layout_height="wrap_content" />
