--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -7,4 +7,5 @@
         android:entryValues="@array/pref_sort_values"
         android:entries="@array/pref_sort_options"
         />
+    <Preference android:title="@string/pref_reset_label" android:key="@string/pref_reset"></Preference>
 </PreferenceScreen>
