--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,5 +15,15 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
+    <TextView
+        android:id="@+id/gridview_movies_empty"
+        android:text="@string/empty_movies_grid"
+        android:textSize="@dimen/abc_text_size_display_1_material"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        />
 
 </FrameLayout>
