--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,13 +17,14 @@
         />
     <TextView
         android:id="@+id/gridview_movies_empty"
+        tools:visibility="visible"
+        android:visibility="invisible"
         android:text="@string/empty_movies_grid"
-        android:textSize="@dimen/abc_text_size_display_1_material"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:textSize="@dimen/abc_text_size_title_material"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:padding="50dp"
         />
 
 </FrameLayout>
