--- a/app/src/main/res/menu/menu_detail_fragment.xml
+++ b/app/src/main/res/menu/menu_detail_fragment.xml
@@ -2,6 +2,6 @@
     xmlns:support="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_share"
         android:title="Share"
-        support:showAsAction="ifRoom"
+        support:showAsAction="always"
         support:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
