--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue_900">#0D47A1</color>
+    <color name="blue_800">#1565C0</color>
     <color name="blue_500">#2196F3</color>
     <color name="blue_300">#64B5F6</color>
     <color name="pink_500">#E91E63</color>
+    <color name="transparent_blue_900">#800D47A1</color>
+    <color name="transparent_blue_800">#801565C0</color>
 </resources>
