--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,23 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimary">@color/blue_800</item>
         <item name="colorPrimaryDark">@color/blue_900</item>
         <item name="colorAccent">@color/pink_500</item>
+        <!--<item name="android:actionBarStyle">@style/ThemeActionBar</item>-->
+        <!--<item name="windowActionBarOverlay">true</item>-->
     </style>
-
+    <style name="DetailActivityTheme" parent="AppTheme">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionBarStyle">@style/CustomActionBarTheme</item>
+        <!--For compatibility-->
+        <item name="windowActionBarOverlay">true</item>
+        <item name="actionBarStyle">@style/CustomActionBarTheme</item>
+    </style>
+    <!-- the theme applied to the application or activity -->
+    <style name="CustomActionBarTheme" parent="Widget.AppCompat.ActionBar.Solid">
+        <item name="android:background">@color/transparent_blue_900</item>
+        <!--For compatibility-->
+        <item name="background">@color/transparent_blue_900</item>
+    </style>
 </resources>
