--- a/app/src/main/res/menu/menu_main_fragment.xml
+++ b/app/src/main/res/menu/menu_main_fragment.xml
@@ -4,5 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
-        app:showAsAction="never" />
+        android:icon="@drawable/refresh"
+        app:showAsAction="always" />
 </menu>
