--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/white"
     android:layout_height="match_parent" android:layout_width="match_parent"
     tools:layout_height="wrap_content" tools:layout_width="wrap_content">
-    <ImageView android:id="@+id/grid_item_movie"
+
+    <ImageView
+        android:id="@+id/grid_item_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_width="wrap_content"
         tools:layout_height="wrap_content"
-        android:background="@android:color/background_light"
         tools:src="@drawable/poster" />
+
     <TextView android:id="@+id/movie_release_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,5 +24,4 @@
         android:textAlignment="gravity"
         android:visibility="invisible"
         />
-
 </FrameLayout>
