--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -112,34 +112,47 @@
                     android:id="@+id/movie_overview"
                     android:text="@string/please_select_movie_desc"
                     android:textSize="@dimen/abc_text_size_small_material"
+                    android:paddingBottom="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <LinearLayout android:orientation="vertical" android:id="@+id/movie_trailers_container"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/movie_trailers_container"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
                     <TextView
                         android:id="@+id/movie_trailers_label"
                         android:text="@string/movie_trailers_label"
                         android:textSize="@dimen/abc_text_size_medium_material"
                         android:textStyle="bold"
                         android:paddingBottom="5dp"
-                        android:layout_width="match_parent" android:layout_height="wrap_content" />
-                    <View android:background="@android:color/darker_gray"
-                        android:layout_width="match_parent" android:layout_height="1dp" />
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <View
+                        android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp" />
+
                 </LinearLayout>
-                <LinearLayout android:orientation="vertical" android:id="@+id/movie_reviews_container"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/movie_reviews_container"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/movie_reviews_label"
                         android:text="@string/movie_reviews_label"
                         android:textSize="@dimen/abc_text_size_medium_material"
                         android:textStyle="bold"
                         android:paddingBottom="5dp"
-                        android:layout_width="match_parent" android:layout_height="wrap_content" />
-                    <View android:background="@android:color/darker_gray"
-                        android:layout_width="match_parent" android:layout_height="1dp" />
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <View
+                        android:background="@android:color/darker_gray"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp" />
                 </LinearLayout>
             </LinearLayout>
             </android.support.v7.widget.CardView>
