Refactor rename, and minors

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -160,7 +160,7 @@
     </ScrollView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favorite_toggle"
-        android:src="@drawable/heart"
+        android:src="@drawable/ic_heart"
         app:backgroundTint="@color/pink_500"
         android:layout_gravity="end|bottom"
         app:fabSize="normal"
