--- a/app/src/main/res/menu/menu_main_fragment.xml
+++ b/app/src/main/res/menu/menu_main_fragment.xml
@@ -4,6 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
-        android:icon="@drawable/refresh"
+        android:icon="@drawable/ic_refresh"
         app:showAsAction="always" />
 </menu>
