--- a/app/src/main/res/layout/grid_item_trailer.xml
+++ b/app/src/main/res/layout/grid_item_trailer.xml
@@ -2,8 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="160dp"
+    android:layout_height="120dp">
 
     <ImageView
         android:id="@+id/movie_trailers_thumbnail"
@@ -12,17 +12,19 @@
         android:layout_margin="0dp"
         android:layout_gravity="top|left"
         android:scaleType="centerInside"
-        android:layout_width="160dp"
-        android:layout_height="120dp"
         android:background="@color/accent_material_dark"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         />
 
     <TextView android:id="@+id/movie_trailer_title"
         android:textColor="@android:color/white"
         android:layout_gravity="top|left"
+        android:textSize="@dimen/abc_text_size_small_material"
         tools:text="@string/movie_trailer_placeholder"
         android:textAlignment="gravity"
-        android:paddingTop="2dp"
+        android:paddingLeft="1dp"
+        android:paddingTop="1dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
