--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -128,7 +128,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-
                     <TextView
                         android:id="@+id/movie_trailers_label"
                         android:text="@string/movie_trailers_label"
@@ -142,9 +141,12 @@
                     <com.ratanachai.popularmovies.MyGridView
                         android:id="@+id/gridview_trailers"
                         android:stretchMode="columnWidth"
+                        android:padding="0dp"
+                        android:verticalSpacing="12dp"
+                        android:horizontalSpacing="6dp"
+                        android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         />
                 </LinearLayout>
 
