Add setContentDescription for MainFragment by adding title for each Grid of Movies

--- a/app/src/main/res/layout/grid_item_movie.xml
+++ b/app/src/main/res/layout/grid_item_movie.xml
@@ -20,7 +20,7 @@
         android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material"
         android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark"
         android:layout_gravity="top|right"
-        android:text="2016"
+        tools:text="2016"
         android:textAlignment="gravity"
         android:visibility="invisible"
         />
