--- a/app/src/main/res/layout/grid_item_trailer.xml
+++ b/app/src/main/res/layout/grid_item_trailer.xml
@@ -25,6 +25,7 @@
         android:textAlignment="gravity"
         android:paddingLeft="1dp"
         android:paddingTop="1dp"
+        android:importantForAccessibility="no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
