--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -13,7 +13,6 @@
         android:importantForAccessibility="no"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
     <ScrollView
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
@@ -58,7 +57,6 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
                     <RatingBar
                         android:id="@+id/movie_rating_bar"
                         style="?android:attr/ratingBarStyleSmall"
@@ -179,6 +177,13 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
+    <!-- Toolbar as Actionbar -->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favorite_toggle"
         android:src="@drawable/ic_heart"
