--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -180,6 +180,7 @@
     <!-- Toolbar as Actionbar -->
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
+        android:theme="@style/ToolBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
